# test02

./: .gitignore  4-Final Architecture Design.md  5-Architecture Upgrade Execution Plan.md  HANDOFF.md  Makefile  README.md  backup.sh  diag-glm-output.txt  diag-glm-v2-output.txt  release.sh  test_comparison.py  test_full.py  test_smoke.py
_agents/: arch-advisor.md  code-explorer.md  retro-analyst.md  security-reviewer.md
_factory/experts/_TEMPLATE.expert/: README.md  expert.yaml
_factory/experts/_TEMPLATE.expert/knowledge/: _gaps.md  _sources.yaml
_factory/experts/compliance-auditor.expert/: expert.yaml
_factory/experts/compliance-auditor.expert/knowledge/: negation_cases.md
_factory/experts/debt-lawyer.expert/: demo_r1_legal_logic.py  expert.yaml
_factory/experts/debt-lawyer.expert/knowledge/: _gaps.md  _sources.yaml  practical_qa_highlights.md  statutes_summary.md  民间借贷纠纷办案手册（1.0版） (法信).json  民间借贷纠纷办案手册（1.0版） (法信).md
_factory/experts/execution-strategist.expert/: expert.yaml
_factory/experts/risk-assessor.expert/: expert.yaml
_factory/lessons/: 2026-Q2-debt-collection.lesson.md  _TEMPLATE.lesson.md
_factory/patterns/data-acquisition/: README.md  pyproject.toml
_factory/patterns/data-acquisition/src/acquisition/: browser_assist.py  cli.py  models.py  planner.py  sources_registry.py
_factory/patterns/data-acquisition/tests/: test_acquisition.py
_factory/patterns/fastapi-backend/: README.md  pyproject.toml
_factory/patterns/fastapi-backend/src/app/: config.py  core.py  main.py
_factory/patterns/fastapi-backend/tests/integration/: test_api.py
_factory/patterns/fastapi-backend/tests/unit/: test_core.py
_factory/patterns/ingestion-pipeline/: README.md  pyproject.toml  verify-real.sh
_factory/patterns/ingestion-pipeline/src/ingestion/: cli.py  models.py  pipeline.py  processors.py
_factory/patterns/ingestion-pipeline/tests/: test_ingestion.py
_factory/patterns/llm-telemetry/: README.md  pyproject.toml
_factory/patterns/llm-telemetry/src/llm_telemetry/: telemetry.py
_factory/patterns/llm-telemetry/tests/: test_telemetry.py
_factory/patterns/peer-review/: pyproject.toml
_factory/patterns/peer-review/src/peer_review/: __init__.py  agent_factory.py  knowledge_loader.py  orchestrator.py  team_orchestrator.py
_factory/patterns/peer-review/src/peer_review/config/: __init__.py  loader.py  schemas.py
_factory/patterns/peer-review/tests/: test_peer_review.py  verify_architecture.py
_factory/skills/: _TEMPLATE.skill.md  arch-design.skill.md  asset-search.skill.md  compliance-layered.skill.md  data-acquisition.skill.md  data-ingestion.skill.md  data-quality.skill.md  discovery-interview.skill.md  prescription-risk.skill.md  security-review.skill.md  tdd-cycle.skill.md
_infra/: .env.example  CLAUDE.global.md  diag-glm.sh  forge-cli.sh  litellm-config.yaml  model-routing-rules.md  setup.sh  start-litellm.sh  verify-glm.sh
_infra/forge_tools/: pyproject.toml
_infra/forge_tools/src/forge/: __init__.py  cli.py  phases.py  task_graph.py
_infra/forge_tools/tests/: test_cli.py  test_phases.py  test_task_graph.py
config/: models.yaml  privacy_policy.yaml  routing_plans.yaml
docs/: AI 项目孵化工厂架构设计书-V4.docx  AI 项目孵化工厂需求说明书-V2.docx  CHANGELOG.md  DECISIONS.md  DEV_LOG.md  FACTORY_ASSESSMENT.md  FACTORY_OPERATIONS.md  PROJECT_STATE.md  REAL_MACHINE_VALIDATION.md  RUNBOOK_BUILD_VERIFY.md  SETUP_GUIDE.md  benchmark.md
docs/research/: anti-ban-crawling-strategy.md  browser-automation-tools-selection.md  data-acquisition-feasibility.md  expert-system-design.md  ingestion-tools-comparison.md
projects/_TEMPLATE/: AGENTS.md
projects/_TEMPLATE/.claude/: CLAUDE.md  test-runner.sh
projects/_TEMPLATE/docs/: BUILD_LOG.md  DISCOVERY.md  RISK.md  SPEC.md  TASK_GRAPH.md
projects/debt-collection/: .gitignore  AGENTS.md  pyproject.toml  sources.yaml
projects/debt-collection/.claude/: lint-runner.sh
projects/debt-collection/.claude/agents/: coder.md
projects/debt-collection/.claude/hooks/: pre-commit.sh
projects/debt-collection/docs/: DISCOVERY.md  RETRO.md  RISK.md  SPEC.md  TASK_GRAPH.md  collect-retro-data.sh  strategy-sample-claude.md
projects/debt-collection/docs/adr/: ADR-000-template.md  ADR-001-local-cli-sqlite.md  ADR-002-glm-first-anti-hallucination.md  ADR-003-compliant-acquisition-only.md  ADR-004-execution-feasibility-first.md  ADR-005-local-sensitive-data.md  ADR-006-dynamic-case-intel.md
projects/debt-collection/docs/external-review/: _INPUT_TEMPLATE.md
projects/debt-collection/docs/harden/: HARDEN_CHECKLIST.md  SECURITY_REVIEW.md  security_scan.sh
projects/debt-collection/docs/specs/example-feature/: acceptance.md  spec.md
projects/debt-collection/src/debt/: cli.py  compliance.py  integrations.py  intel.py  knowledge.py  ledger.py  llm_client.py  models.py  strategy.py  timeline.py
projects/debt-collection/tests/: test_debt.py
retro-data-share/: 01_pytest.txt  02_security_scan.txt  03_strategy_glm.txt  04_strategy_local.txt
(+7 files in other folders)
