# 创建/修改该文件的LLM大模型：Claude Sonnet 4.5 (via Arena.ai Agent Mode)
# 创建时间（北京时间，精确到秒）：2026-06-11 23:10:00 CST

[project]
name = "forge-data-acquisition"
version = "0.1.0"
description = "FORGE 工厂通用能力：L1 合规取数协调器（官方公开渠道待查清单+结果归档，不暴力爬、不封号）"
requires-python = ">=3.11"
dependencies = []   # L1 核心零依赖

[project.optional-dependencies]
# L2 半自动(人在环)增强：真机按需装，遇验证码/登录停下等人工
l2 = [
    # "browser-use",   # 浏览器 Agent（接 GLM），遇验证码停下等人工
    # "playwright",
]
dev = ["pytest>=8.0"]

[project.scripts]
forge-acquire = "acquisition.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acquisition"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
