# 创建/修改该文件的LLM大模型：Claude Sonnet 4.5 (via Arena.ai Agent Mode)
# 创建时间（北京时间，精确到秒）：2026-06-11 22:10:00 CST

[project]
name = "forge-ingestion-pipeline"
version = "0.1.0"
description = "FORGE 工厂通用能力：本地资料整理（PDF/图片/录音/Office → 结构化 Markdown+JSON），零核心依赖、优雅降级"
requires-python = ">=3.11"
dependencies = []   # 核心零依赖；真机按需装可选增强

[project.optional-dependencies]
# 真机按需安装这些以启用更强解析（缺失时自动降级，不影响核心流程）
enhance = [
    "markitdown[all]",            # MIT，多格式轻量入口
    "pypdf",                      # PDF 纯文本降级
    # MinerU / funasr 体积大，建议单独按需装：
    # "mineru",                   # 中文复杂版面 PDF/图片首选（模型 AGPL）
    # "funasr",                   # 通话录音转写+说话人分离（中文最强）
]
dev = ["pytest>=8.0"]

[project.scripts]
forge-ingest = "ingestion.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ingestion"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
