# 创建/修改该文件的LLM大模型：Claude Sonnet 4.5 (via Arena.ai Agent Mode)
# 创建时间（北京时间）：2026-06-13 16:15:00 CST

[project]
name = "peer-review"
version = "0.1.0"
description = "FORGE Factory Peer-Review 多专家评审引擎（FB-14）"
requires-python = ">=3.11"
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/peer_review"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
